--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend/:/backend/
-    command: uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    command: alembic upgrade head && uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
     env_file:
       - ./backend/.env
     ports:
@@ -16,7 +16,8 @@ services:
   db:
     image: postgres:13-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      - ./data/:/data/
     env_file:
       - ./backend/.env
     ports:
