--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend/:/backend/
-    command: alembic upgrade head && uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    command: bash -c "pip install psycopg2-binary && alembic upgrade head && uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000"
     env_file:
       - ./backend/.env
     ports:
@@ -16,7 +16,7 @@ services:
   db:
     image: postgres:13-alpine
     volumes:
-      - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      # - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
       - ./data/:/data/
     env_file:
       - ./backend/.env
