--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,11 @@ uvicorn==0.11.3
 pydantic==1.4
 email-validator==1.1.1
 # db
-py3-psycopg2==2.7.5
 databases[postgresql]==0.4.2
 SQLAlchemy==1.3.16
 alembic==1.4.2
-
+# dev
+pytest==6.2.1
+pytest-asyncio==0.14.0
+httpx==0.16.1
+asgi-lifespan==1.0.1
